# forge

./: .gitattributes  .gitignore  .gitvendors  .rules  Cargo.toml  GH#10  GH#15  GH#17  GH#18  GH#19  GH#21  GH#22  GH#29  GH#30  GH#32  GH#33  GH#34  GH#38  GH#39  GH#4  GH#40  GH#41  GH#42  GH#43  GH#44  GH#46  GH#47  GH#48  GH#49  GH#50  GH#51  GH#7  GH#9  README.md  anchor  anchor-content  body  description  source_ref  title
.cargo/: config.toml
.config/: committed.toml  deny.toml  pre-commit.yaml  release-please-config.json  release-please-manifest.json  rumdl.toml
.forge/: toolchains.toml
.github/workflows/: CD.yml  CI.yml  Lint.yml  Version.yml
.zed/: settings.json
comments/: 4151144714  4151144719  4174288863  4174288929  4174288954  4174288988  4174289029
crates/forge-benchmarks/: Cargo.toml  README.md
crates/forge-benchmarks/benches/: forge.rs
crates/forge-benchmarks/src/: lib.rs
crates/forge-github/: Cargo.toml
crates/forge-github/src/: client.rs  config.rs  export.rs  import.rs  lib.rs  state.rs
crates/forge-github/tests/: comment.rs  config.rs  issue.rs  review.rs  state.rs
crates/forge-lsp/: Cargo.toml
crates/forge-lsp/src/: main.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/src/: comment.rs  issue.rs  lib.rs  main.rs  review.rs  server.rs
crates/forge-server/: Cargo.toml
crates/forge-server/src/: lib.rs  main.rs
crates/git-forge/: Cargo.toml  README.md
crates/git-forge-comment/: Cargo.toml
crates/git-forge-comment/benches/: comments.rs
crates/git-forge-comment/src/: cli.rs  exe.rs  git2.rs  lib.rs  tests.rs
crates/git-forge-comment/tests/: comments.rs
crates/git-forge-comments/: Cargo.toml
crates/git-forge-core/: Cargo.toml  README.md
crates/git-forge-core/src/: contributor.rs  credentials.rs  lib.rs  metadata.rs
crates/git-forge-core/src/contributor/: git2.rs
crates/git-forge-core/src/metadata/: approvals.rs  comments.rs
crates/git-forge-core/src/metadata/approvals/: git2.rs
crates/git-forge-core/src/metadata/comments/: git2.rs
crates/git-forge-issue/: Cargo.toml  README.md
crates/git-forge-issue/benches/: issues.rs
crates/git-forge-issue/src/: cli.rs  exe.rs  git2.rs  lib.rs  tests.rs
crates/git-forge-issue/src/tests/: find_issue.rs  list_issues.rs  new_issue.rs
crates/git-forge-issues/: Cargo.toml  README.md
crates/git-forge-issues/src/: cli.rs  exe.rs  indices.rs  issues.rs  lib.rs
crates/git-forge-issues/src/indices/: issues.rs
crates/git-forge-issues/src/indices/issues/: git2.rs
crates/git-forge-issues/src/issues/: git2.rs
crates/git-forge-issues/src/tests/: find_issue.rs  list_issues.rs  new_issue.rs
crates/git-forge-release/: Cargo.toml  README.md
crates/git-forge-release/src/: cli.rs  exe.rs  lib.rs
crates/git-forge-review/: Cargo.toml  README.md
crates/git-forge-review/src/: cli.rs  exe.rs  indices.rs  lib.rs  reviews.rs
crates/git-forge-review/src/indices/: reviews.rs
crates/git-forge-review/src/indices/reviews/: git2.rs
crates/git-forge/src/: access.rs  actor.rs  checks.rs  cli.rs  comment.rs  contributor.rs  counters.rs  enforcement.rs  entities.rs  error.rs  exe.rs  index.rs  input.rs  install.rs  interactive.rs  issue.rs  lib.rs  main.rs  refs.rs  reindex.rs  review.rs  run.rs  sync.rs  tests.rs  tool.rs  tree.rs
crates/git-forge/src/access/: contributors.rs  policy.rs
crates/git-forge/src/access/contributors/: git2.rs
crates/git-forge/src/access/policy/: git2.rs
crates/git-forge/src/annotations/: approvals.rs  comments.rs
crates/git-forge/src/annotations/approvals/: git2.rs
crates/git-forge/src/annotations/comments/: git2.rs
crates/git-forge/src/checks/: definitions.rs  results.rs
crates/git-forge/src/checks/definitions/: git2.rs
crates/git-forge/src/checks/results/: git2.rs
crates/git-forge/src/cli/: check.rs
crates/git-forge/src/counters/: git2.rs
crates/git-forge/src/enforcement/: gate.rs  queue.rs
crates/git-forge/src/enforcement/gate/: git2.rs
crates/git-forge/src/enforcement/queue/: git2.rs
crates/git-forge/src/entities/: issues.rs  reviews.rs
crates/git-forge/src/entities/issues/: git2.rs
crates/git-forge/src/entities/reviews/: git2.rs
crates/git-forge/src/tests/: comment.rs  issue.rs  review.rs
crates/git-forge/tests/: comment.rs  contributor.rs  exe_fixes.rs  issue.rs  review.rs
crates/git-kiln/: Cargo.toml
crates/git-kiln/src/: cli.rs  main.rs
crates/hearth/: Cargo.toml
crates/hearth/src/: cli.rs  env.rs  exe.rs  import.rs  lib.rs  main.rs  store.rs  tests.rs
crates/kiln-benchmarks/: Cargo.toml  README.md
crates/kiln-benchmarks/benches/: kiln.rs
crates/kiln-benchmarks/src/: lib.rs
docs/design/: git-cas-benchmarks.md  git-forge-benchmarks.md  git-forge-comment-plan.md  git-forge-comments-v1.md  git-forge-comments.md  git-forge.md  git-kiln-benchmarks.md  git-kiln.md  hearth.md  plan.md  review-checkout.md
docs/dev/: comment-system-plan.md  forge-mvp.md  forge-server-subcommand.md  issues-reviews-comments.md  refactor-sync-state-api.md
docs/incidents/: recover-comments.md
experiments/git2-odb-bench/: Cargo.toml
experiments/git2-odb-bench/src/: artifact.rs  lib.rs
extensions/forge-nvim/lua/: forge.lua
extensions/forge-zed/: Cargo.toml  extension.toml
extensions/forge-zed/src/: lib.rs
issues/: 23  24  25  26  52
joey/: emails
joseph/: name
objects/ab18f5af5ca7a6b2a6db04bdaec7f54aa9cd7597/: Cargo.toml  README.md
objects/ab18f5af5ca7a6b2a6db04bdaec7f54aa9cd7597/src/: cli.rs  comment.rs  error.rs  exe.rs  interactive.rs  issue.rs  main.rs  refs.rs  review.rs  sync.rs  tests.rs
objects/ab18f5af5ca7a6b2a6db04bdaec7f54aa9cd7597/src/tests/: comment.rs  issue.rs  review.rs
objects/ab18f5af5ca7a6b2a6db04bdaec7f54aa9cd7597/tests/: contributor.rs  exe_fixes.rs  refs.rs  review.rs
provider/github/git-mirdain/forge/sigil/: issue
reviews/: 1  2  3
source/: url
tmp/: issue-display-id-preference.md  issue-facet-vec-args.md
