[workspace]
resolver = "3"
members = [
    "crates/git-forge",
    "crates/git-forge-core",
    "crates/git-forge-issue",
    "crates/git-forge-review",
    "crates/git-forge-release",
    "crates/git-forge-comment",
]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_mangen = "0.2.31"

git2 = "0.20.4"
globset = "0.4.18"
git2_credentials = { version = "0.15.0", features = ["ui4dialoguer"] }
git-forge-core = { path = "crates/git-forge-core" }
git-forge-issue = { path = "crates/git-forge-issue" }
git-forge-review = { path = "crates/git-forge-review" }
git-forge-comment = { path = "crates/git-forge-comment" }
git-forge-release = { path = "crates/git-forge-release" }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
toml = "0.8"
ureq = "3"
