[package]
name = "forge-benchmarks"
version = "0.0.0"
edition.workspace = true
publish = false
license.workspace = true
description = "Benchmarks for git-forge data access patterns at realistic scale."

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
git2 = { workspace = true }
tempfile = "3"
rand = "0.8"

[[bench]]
name = "forge"
harness = false

[lints]
workspace = true
