[package]
name = "forge-github"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "GitHub import adapter for the forge store."

[dependencies]
git-chain = { workspace = true }
git-forge = { workspace = true }
git2 = { workspace = true }
octocrab = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
