[package]
name = "forge-mcp"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "MCP server exposing forge metadata from the Git object store."

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
git-forge = { workspace = true }
git2 = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
