[package]
name = "forge-mcp"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "MCP server exposing forge metadata from the Git object store."

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
facet-json = { workspace = true }
git-forge = { workspace = true }
git2 = { workspace = true }
rmcp = { workspace = true }
schemars = "1"
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
