[package]
name = "forge-server"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Forge sync daemon — watches refs and coordinates GitHub sync."

[[bin]]
name = "forge-server"
path = "src/main.rs"

[dependencies]
git-forge = { workspace = true }
forge-github = { workspace = true }
git2 = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
