[package]
name = "git-forge-comment"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
git2 = { workspace = true }
git-forge-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "comments"
harness = false

[lints]
workspace = true
