[package]
name = "git-forge-comment"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
git2 = { workspace = true }
git-forge-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
