[package]
name = "git-forge-core"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Shared annotations for git-forge: comments and approvals."

[dependencies]
git2 = { workspace = true }
git2_credentials = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "core"
harness = false

[lints]
workspace = true
