[package]
name = "git-forge-issue"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Issue tracking domain for git-forge."

[dependencies]
clap = { workspace = true }
git-forge-comment = { workspace = true }
git-forge-core = { workspace = true }
git2 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "issues"
harness = false

[lints]
workspace = true
