[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package]
name = "hearth"
version = "0.1.0"
description = "Environments as Git trees."
repository = "https://github.com/git-ents/git-hearth"
documentation = "https://docs.rs/hearth"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "hearth"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen.workspace = true
flate2.workspace = true
git2.workspace = true
serde.workspace = true
tar.workspace = true
tempfile.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
